added testing files

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ collections:
       output: true
   people:
     output: true
-  article:
+  articles:
     output: true
-  algorithm:
+  algorithms:
     output: true
 
 defaults:
