--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,69 @@
+url: https://y7kim.github.io
+baseurl: ''
+
+# Site settings
+title: Brain2Speech
+email:
+description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+
+
+# Team names, titles and social links
+people:
+- name:
+  pic: 0
+  position:
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: stack-overflow
+      url: #
+
+- name: Sid Fels
+  pic: 0
+  position: Professor and Lab Director
+  social:
+    - title: Email
+      url: #
+    - title: facebook
+      url: #
+    - title: linkedin
+      url: #
+
+- name:
+  pic: 0
+  position:
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: twitter
+    url: http://twitter.com/jekyllrb
+  - title: facebook
+    url:
+  - title: stack-overflow
+    url: http://stackoverflow.com/questions/tagged/jekyll
+  - title: bitbucket 
+    url: http://bitbucket.org/jekyll
+  - title: github
+    url: http://github.com/jekyll
+
+# Postal address (add as many lines as necessary)
+address:
+  - line: 3481 Melrose Place
+  - line: Beverly Hills, CA 90210
+
+# Build settings
+markdown: kramdown
+permalink: none
+
 collections:
-  datasets:
-      output: true
-  people:
-    output: true
-  articles:
-    output: true
   algorithms:
     output: true
-
-defaults:
-  - scope:
-      path: ""
-      type: "articles"
-    values:
-      layout: "article"
-  - scope:
-      path: ""
-      type: "datasets"
-    values:
-      layout: "datasets"
-  - scope:
-      path: ""
-      type: "people"
-    values:
-      layout: "people"
-  - scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-  - scope:
-      path: ""
-    values:
-      layout: "default"
-  - scope:
-      path: ""
-      type: "algorithms"
-    values:
-      layout: "algorithm"
-
-theme: jekyll-theme-cayman
