--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fec503
-  secondary: f5bc03
+  primary:  091C57
+  secondary: 18448f
   secondary-dark: 333
   muted: 777
 
